fix some alignments

--- a/infinitv.css
+++ b/infinitv.css
@@ -345,7 +345,10 @@
   background: #0000 !important;
   -webkit-transform: none !important;
   transform: none !important;
+  margin-top: .2em !important;
   margin-bottom: .2em !important;
+  padding-left: .5em !important;
+  padding-right: .5em !important;
 }
 .listItem-button:not(.listItem-largeImage):hover,
 .listItem-border:hover,
@@ -620,6 +623,11 @@
   display: none !important;
 }
 
+/* Scroller Alignment */
+#indexPage .emby-scroller {
+  padding-left: 2vw;
+}
+
 /* Use freed up Space (TV) */
 .layout-tv .homeSectionsContainer {
   top: 0;
@@ -713,18 +721,6 @@
   -webkit-transform: none !important;
   transform: none !important;
 }
-/*
-.btnNextPage,
-.btnPlayAll,
-.btnFilter,
-.btnShuffle,
-.btnSelectView,
-.btnSort {
-  margin-left: .4em;
-  margin-right: .4em;
-  -webkit-transform: none !important;
-  transform: none !important;
-} */
 
 /* Filter & Sorting Header: Item Count */
 .listPaging > span {
@@ -1454,12 +1450,12 @@ p.itemGenres {
   padding-top: 5em !important;
 }
 
-/* Menu Items */
+/* Menu Items
 .readOnlyContent .listItem-border .listItem,
 .actionSheetScroller .listItem {
   padding-left: 1em;
   margin-top: 0.2em !important;
-}
+} */
 
 /* Menu Items: Additional content */
 .listItemButton,
